--- a/package.json
+++ b/package.json
@@ -14,17 +14,17 @@
   "license": "Apache-2.0",
   "dependencies": {
     "bacstack": "0.0.1-beta.13",
+    "bl": ">=1.2.3",
     "body-parser": ">=1.18.3",
+    "bufferutil": ">=4.0.1",
     "config": ">=3.0.1",
     "cors": "^2.8.5",
     "express": ">=4.16.4",
-    "mqtt": ">=4.2.6",
+    "glob-parent": ">=5.1.2",
+    "mqtt": "^4.3.4",
     "node-schedule": "^1.3.2",
-    "winston": ">=3.2.1",
-    "bl": ">=1.2.3",
-    "bufferutil": ">=4.0.1",
     "utf-8-validate": ">=5.0.2",
-    "glob-parent": ">=5.1.2"
+    "winston": ">=3.2.1"
   },
   "devDependencies": {},
   "bugs": {
